# dex

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-14-dex-cli-v0.1.0.md
docs/superpowers/specs/: 2026-03-14-dex-cli-design.md
src/: main.rs  output.rs  show.rs  sync.rs
src/models/: context.rs  mod.rs  paths.rs
src/scanner/: entry_points.rs  languages.rs  manifests.rs  mod.rs  structure.rs
tests/: integration_test.rs
tests/fixtures/go_service/: go.mod
tests/fixtures/python_lib/: pyproject.toml
tests/fixtures/python_lib/src/mylib/: __init__.py
tests/fixtures/rust_cli/: Cargo.toml
tests/fixtures/rust_workspace/crates/cli/: Cargo.toml
tests/fixtures/ts_web/: package.json
