[package]
name = "dex"
version = "0.1.0"
edition = "2024"
description = "Codebase context protocol — generate .dex/ for any project"
license = "MIT"
repository = "https://github.com/dexs-oss/dex"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
